--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -2,7 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:focusableInTouchMode="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -197,6 +199,19 @@
                 android:maxEms="10" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <ProgressBar
+            android:id="@+id/loader"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:indeterminateTint="@color/colorPrimaryDark"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/generate"
+            app:layout_constraintEnd_toEndOf="@+id/generate"
+            app:layout_constraintStart_toStartOf="@+id/generate"
+            app:layout_constraintTop_toBottomOf="@+id/layout_phone_number"
+            tools:visibility="visible" />
+
 
         <Button
             android:id="@+id/generate"
